--- a/src/styles/card/card__wrapper.css
+++ b/src/styles/card/card__wrapper.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 40px 40px;
+  padding: 0 40px;
 }
 
 @media screen and (max-width: 900px) {
